Ndryshimi i background-it

--- a/caremed/Doctor/DoctorClassCSS.css
+++ b/caremed/Doctor/DoctorClassCSS.css
@@ -1,6 +1,6 @@
 body
 {
-	background-image: url("../images/LoginWall.jpg");
+	background-image: url("../images/dna.jpg");
 }
 
 h1
@@ -97,7 +97,7 @@ h1
 }
 .btn1 
 {
-    background-color: #696969;
+    background-color: #00008B;
     border: none;
     padding: 12px 28px;
     text-align: center;
